# Man-in-the-Box

./: .gitignore  Cargo.toml  Dockerfile.mitb-server  Makefile.toml  README.md  rust-toolchain.toml
mitb-av/: Cargo.toml
mitb-av/src/: lib.rs  program.rs  yuv.rs
mitb-av/src/program/: pipeline.rs  shader.wgsl
mitb-av/src/program/pipeline/: instance.rs
mitb-box/: Cargo.toml
mitb-box/src/: animated_eye.rs  av.rs  lib.rs  terminal.rs
mitb-examples/: Cargo.toml  README.md  wasi_snapshot_preview1.reactor.wasm
mitb-examples/always-wait/: Cargo.toml  README.md
mitb-examples/always-wait/src/: lib.rs
mitb-examples/git-responder/: Cargo.toml  README.md
mitb-examples/git-responder/src/: drip_emitter.rs  env.rs  lib.rs  reply.rs  thread_context.rs
mitb-examples/git-responder/src/providers/: github.rs  gitlab.rs  mod.rs
mitb-examples/maintainability/: Cargo.toml  README.md  build.rs
mitb-examples/maintainability/src/: lib.rs
mitb-examples/number-game/: Cargo.toml  README.md  build.rs
mitb-examples/number-game/src/: lib.rs
mitb-examples/treesitter-provider/: Cargo.toml  build.rs
mitb-examples/treesitter-provider/src/: lib.rs
mitb-host/: Cargo.toml  build.rs
mitb-host/src/: agent.rs  error.rs  lib.rs  policy_log.rs  pty_io.rs  runtime.rs  stream_bridge.rs  terminal_state.rs  transcript.rs
mitb-host/src/agent/: auth.rs  av.rs  protocol.rs  signaling.rs  signaling_handlers.rs
mitb-mcp/: Cargo.toml
mitb-mcp/src/: main.rs
mitb-pake/: Cargo.toml
mitb-pake/src/: lib.rs
mitb-sdk/: Cargo.toml
mitb-sdk/src/: build_support.rs  fs.rs  git.rs  lib.rs
mitb-sdk/src/search/: mcts.rs
mitb-server/: Cargo.toml  build.rs
mitb-server/src/: app_state.rs  lib.rs  main.rs  ws_auth.rs  ws_public.rs  ws_runtime.rs
mitb-server/static/: index.html
mitb-wit/: Cargo.toml
mitb-wit/src/: lib.rs
mitb-wit/wit/: world.wit
src/: main.rs
