[package]
name = "mitb-av"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
glam = { version = "0.30.9", features = ["bytemuck"] }
iced = { version = "0.14.0", features = ["tokio", "svg"] }
itertools = "0.14.0"
matroska-demuxer = "0.7.0"
opus-decoder = "0.1.1"
re_rav1d = { version = "0.1.3", default-features = false, features = ["bitdepth_8"] }
rodio = { version = "0.22.2", default-features = false, features = ["playback"] }
symphonia = { version = "0.5.5", default-features = false }
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["sync"] }
tracing = "0.1.41"
