[package]
name = "mitb-box"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
futures-lite = "2.6.1"
mitb-av = { path = "../mitb-av" }
mitb-host = { path = "../mitb-host" }
iced = { version = "0.14.0", features = ["tokio", "svg", "canvas", "advanced"] }
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["sync"] }
tracing = "0.1.41"
unicode-width = "0.2.0"
vte = "0.15.0"

[lints]
workspace = true
