[workspace]
resolver = "2"
members = [
    "always-wait",
    "maintainability",
    "number-game",
    "treesitter-provider",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
wit-bindgen = "0.51.0"
mitb-sdk = { path = "../mitb-sdk" }
