[package]
name = "mitb-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
bytes = "1.10.1"
futures-util = "0.3.31"
mitb-pake = { path = "../mitb-pake" }
ice = { version = "0.14.0", package = "webrtc-ice" }
http = "1.3.1"
portable-pty = "0.9.0"
rustls = { version = "0.23.37", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "time", "process", "sync", "fs", "io-util"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }
tracing = "0.1.41"
url = "2.5.7"
vte = "0.15.0"
wasmtime = { version = "=41.0.4", features = ["component-model", "component-model-async", "async"] }
wasmtime-wasi = { version = "=41.0.4", features = ["p3"] }
wasmtime-wasi-http = { version = "=41.0.4", features = ["p3"] }
webrtc = "0.14.0"

[build-dependencies]
mitb-wit = { path = "../mitb-wit" }
