[package]
name = "mitb-pake"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
base64 = "0.22.1"
getrandom = { version = "0.2.17", features = ["custom"] }
opaque-ke = { version = "4.1.0-pre.1", default-features = false, features = ["ristretto255", "serde", "argon2"] }
rand_core = "0.6.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
