[package]
name = "mitb-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
build-support = ["dep:mitb-wit", "dep:thiserror"]

[dependencies]
futures = "0.3.31"
glob = "0.3.3"
mitb-wit = { path = "../mitb-wit", optional = true }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = { version = "2.0.18", optional = true }
wasip3 = "0.4.0"

[lints]
workspace = true
