[package]
name = "mitb-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
build = "build.rs"

[lints]
workspace = true

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
futures-util = "0.3.31"
getrandom = "0.2.17"
mitb-pake = { path = "../mitb-pake" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
url = "2.5.7"
